[project]
name = "clueless-clone"
version = "0.1.0"
description = "Semantic word-guessing game — Clueless clone"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sentence-transformers==3.1.1",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "hf-xet>=1.0.3",
    "boto3>=1.34",
]

[tool.uv]
# Generates a lockfile (uv.lock) on `uv sync`.
# For AWS Lambda packaging, run:
#   uv export --no-hashes -o requirements.txt

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
